# idkit-c-swift-wrapper

./: Cargo.toml  Makefile
examples/idkit/: Cargo.toml  bridging-header.h  build.sh  main.swift
examples/idkit/src/: lib.rs
include/: lib.h
src/: lib.rs
