[package]
name = "idkit-swift"
version = "0.1.0"
edition = "2021"
publish = []

build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = {path = "../../crates/swift-bridge-build"}

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
swift-bridge = {path = "../../", features = ["async"]}
idkit = { git = "https://github.com/kroist/idkit-rs.git" }
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
